Update family member
